ola-parser/src/testdata/syntaxTests/iceRegressionTests/declarationUnaryTuple/declaration_bitnot_tuple.sol
contract C
{
    fn f() 
    {
        int x = ~(0,);
    }
}
// ----
// TypeError 8381: (60-64): Tuple component cannot be empty.
